--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <h3>"Paras treeni on se, jonka teet."</h3>
 
 	<!-- Nappulat Lisää ja Poista -->
-	<button class="lisaa">Lisää uusi treeni</button>
-	<button class="poista">Poista treeni</button>
+	 <div class="nappulat">
+		<button class="lisaa">Lisää uusi treeni</button>
+		<button class="poista">Poista treeni</button>
+	</div>
 
 	<!-- Treenitaulukot -->
 	<div class="taulukot">
