--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </div>
      </div>
 
+	<div id="kokonais-yhteensa"></div>
+
     <div class="taulukot">
         <table class="sali">
             <tr>
